# 2pem-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
scratch/: dag.lua
src/: CMakeLists.txt
src/common/: utility.hpp
src/dsp/: binomial_filter.hpp  convolution_kernel.cpp  convolution_kernel.hpp  frame.cpp  frame.hpp  frame.impl.hpp  frame_ops.hpp  frame_ops.impl.hpp  image.hpp  kernel.cpp  kernel.hpp  math.hpp  matlab_kernel.cpp  matlab_kernel.hpp  median_filter.cpp  median_filter.hpp  phase_retrieval.cpp  phase_retrieval.hpp  statistics.impl.hpp
src/glclient/: CMakeLists.txt  app_state.cpp  app_state.hpp  asio_state.cpp  asio_state.hpp  audio_input.cpp  audio_input.hpp  config.hpp.in  gl.cpp  gl.hpp  glfw.cpp  glfw.hpp  input_window.cpp  input_window.hpp  input_window_gl_state.cpp  input_window_gl_state.hpp  lua.cpp  main.cpp  options.cpp  options.hpp  osc_state.cpp  osc_state.hpp  signal_dispatcher.cpp  signal_dispatcher.hpp  slm_state.cpp  slm_state.hpp  slm_window.cpp  slm_window.hpp  slm_window_gl_state.cpp  slm_window_gl_state.hpp  target_point.cpp  target_point.hpp  target_point_store.cpp  target_point_store.hpp
src/server/: main.cpp  raw_file.hpp
src/share/: config.lua
src/util/: file_rewriter.py  osc_test.m  tl_file_monitor.cpp
src/viewer/: CMakeLists.txt  README.md  binomial_filter.cpp  client.cpp  client_app_state.cpp  client_app_state.hpp  client_asio_state.cpp  client_asio_state.hpp  client_audio_input.cpp  client_error.hpp  client_gl_state.cpp  client_gl_state.hpp  client_glfw_state.cpp  client_glfw_state.hpp  client_input_window.cpp  client_input_window.hpp  client_input_window_gl_state.cpp  client_input_window_gl_state.hpp  client_options.cpp  client_options.hpp  client_osc_state.cpp  client_osc_state.hpp  client_signal_dispatcher.cpp  client_signal_dispatcher.hpp  client_slm_state.cpp  client_slm_state.hpp  client_slm_window.cpp  client_slm_window.hpp  client_slm_window_gl_state.cpp  client_slm_window_gl_state.hpp  config.hpp.in  fragment.glsl  frame.cpp  frame.hpp  gerchberg_saxton.cpp  gerchberg_saxton.hpp  gl.cpp  gl.hpp  glfw.cpp  glfw.hpp  (+22 more)
